--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
     <div class="table"></div>
+    <div class="modal modal-closed">
+        <div class="pieces-box"></div>
+    </div>
     
     <script src="./main.js"></script>
 </body>
