--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <div class="pieces-box"></div>
     </div>
     
-    <script src="./main.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 </html>
